[package]
edition = "2018"
name = "jsonlines"
description = "Utilities to work with json lines"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
version = "0.0.0"
license = "Apache-2.0"
keywords = ["jsonlines", "json", "tool", "jsonl"]
categories = ["command-line-utilities"]
repository = "https://github.com/foresterre/jsonlines"

exclude = [
    ".idea/*",
    ".vscode/*",
    "*.iml",
]

[package.metadata]
msrv = "1.38.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonl = "4.0.1"
camino = "1.0.5"
is_executable = "1.0.1"